[package]
name = "contract"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = { git = "https://github.com/casper-network/casper-node", branch = "dev", features = [
  "test-support",
] }
casper-types = { git = "https://github.com/casper-network/casper-node", branch = "dev" }

[[bin]]
name = "contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true
