[package]
name = "tests"
version = "0.1.0"
edition = "2018"

[dev-dependencies]
casper-types = { version = "1.5.0", git = "https://github.com/casper-network/casper-node", branch = "dev" }

casper-engine-test-support = { version = "2.2.0", git = "https://github.com/casper-network/casper-node", branch = "dev", features = [
  "test-support",
] }
casper-execution-engine = { version = "2.0.1", git = "https://github.com/casper-network/casper-node", branch = "dev" }
