[package]
name = "tests"
version = "0.1.0"
edition = "2018"

[dev-dependencies]
casper-types = { git = "https://github.com/casper-network/casper-node", branch = "dev" }

casper-engine-test-support = { git = "https://github.com/casper-network/casper-node", branch = "dev" }
casper-execution-engine = { git = "https://github.com/casper-network/casper-node", branch = "dev" }
