[package]
name = "named_key_session"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-types = "1.5.0"
casper-contract = { version = "1.4.4", features = ["test-support"] }

[[bin]]
name = "named_key_session"
path = "src/main.rs"
bench = false
doctest = false
test = false
