[package]
name = "named_key_session"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-types = "3.0.0"
casper-contract = { version = "3.0.0", features = ["test-support"] }

[[bin]]
name = "named_key_session"
path = "src/main.rs"
bench = false
doctest = false
test = false
